--- a/public/home/index.html
+++ b/public/home/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Home</title>
-  <link rel="stylesheet" href="main.css">
-  <script type="text/javascript" src="app.js" defer></script>
+  <link rel="stylesheet" href="/main.css">
+  <script type="text/javascript" src="/app.js" defer></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
 
