--- a/public/login/index.html
+++ b/public/login/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Material Design Login Form</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/login/style.css">
 </head>
 <body>
     <div class="login-container">
         <div class="login-card">
             <div class="login-header">
                 <div class="material-logo">
-                            <img src="jk2.JPG" alt="" height="150" width="300">
+                            <img src="/login/jk2.JPG" alt="" height="150" width="300">
                     
                 </div>
                 <h2>Sign in</h2>
@@ -118,6 +118,6 @@
     </div>
 
     
-    <script src="script.js"></script>
+    <script src="/login/script.js"></script>
 </body>
 </html>
