Working on the page design

--- a/public/navbar.html
+++ b/public/navbar.html
@@ -26,9 +26,9 @@
         </button>
         <ul class="sub-menu">
           <div>
-            <li><a href="#">Folder</a></li>
-            <li><a href="#">Document</a></li>
-            <li><a href="#">Project</a></li>
+            <li><a href="#">New Client</a></li>
+            <li><a href="#">New Land</a></li>
+            <li><a href="#">New Invoice</a></li>
           </div>
         </ul>
       </li>
