--- a/public/home/index.html
+++ b/public/home/index.html
@@ -6,6 +6,10 @@
   <title>Home</title>
   <link rel="stylesheet" href="/main.css">
   <script type="text/javascript" src="/app.js" defer></script>
+  <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+  />
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
 
@@ -26,7 +30,7 @@
 
             <div class="block-footer">
             <a href="#" class="btn">
-              Read Docs
+              New Payment
               <span class="arrow">➔</span>
             </a>
                         
@@ -156,6 +160,8 @@
     </div>
     
   </main>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 </html>
 
