--- a/public/modules/dashboard/dashboard.html
+++ b/public/modules/dashboard/dashboard.html
@@ -5,13 +5,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/main.css">
     <script type="text/javascript" src="/app.js" defer></script>
+    <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+  />
     <title>Dashboard</title>
 </head>
 <body>
       <div id="navbar-container"></div>
 
-    <main>
+<main>
+    <div class="container mt-4 ml-0">
+    <h1 class="mb-4">Dashboard</h1>
 
-    </main>
+    <div class="row">
+        <div class="col-md-6">
+        <div class="card shadow-sm">
+            <div class="card-body">
+            <h5 class="card-title">Sales Overview</h5>
+            <p class="card-text">Here’s a quick summary of your recent activity.</p>
+            <button class="btn btn-primary">View details</button>
+            </div>
+        </div>
+        </div>
+    </div>
+    </div>
+</main>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 </html>
