--- a/public/modules/profile/profile.html
+++ b/public/modules/profile/profile.html
@@ -3,9 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="/main.css">
+    <script type="text/javascript" src="/app.js" defer></script>
+    <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+  />
+    <title>Profile</title>
 </head>
 <body>
-    
+    <div id="navbar-container"></div>
+
+    <main>
+        <div class="mt-4">
+            <h1 class="mb-4">Profile</h1>
+
+            <div class="row">
+                <div class="col-md-6">
+                <div class="card shadow-sm">
+                    <div class="card-body">
+                    <h5 class="card-title">Sales Overview</h5>
+                    <p class="card-text">Here’s a quick summary of your recent activity.</p>
+                    <button class="btn btn-primary">View details</button>
+                    </div>
+                </div>
+                </div>
+            </div>
+        </div>
+    </main>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
