functionality throughout the app

--- a/public/home/index.html
+++ b/public/home/index.html
@@ -14,7 +14,7 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
 
 </head>
-<body class="">
+<body class="bg-light">
   <!-- Heres my navbar injection through JS -->
    <div id="navbar-container"></div>
    
