Styling my page, end of a day brb tomarrow

--- a/public/navbar.html
+++ b/public/navbar.html
@@ -27,7 +27,7 @@
         <ul class="sub-menu">
           <div>
             <li><a href="/modules/view/client/client.html">Client</a></li>
-            <li><a href="#">Land</a></li>
+            <li><a href="/modules/view/land/land.html">Land</a></li>
             <li><a href="#">Invoice</a></li>
           </div>
         </ul>
