--- a/public/modules/dashboard/dashboard.html
+++ b/public/modules/dashboard/dashboard.html
@@ -146,10 +146,10 @@
                                 <th scope="col"></i> ID</th>
                                 <th scope="col"></i> Request by</th>
                                 <th scope="col">Subject</th>
-                                <th scope="col"></i> Priority</th>
+                                <th scope="col">Paid</th>
                                 <th scope="col">Status</th>
-                                <th scope="col">Create Date</th>
-                                <th scope="col">Due Date</th>
+                                <th scope="col"></i> Priority</th>
+                                <th scope="col">Date</th>
                                 <th scope="col">Action</th>
                             </tr>
                         </thead>
@@ -160,13 +160,31 @@
                                     <img src="https://rickandmortyapi.com/api/character/avatar/769.jpeg" alt="Avatar" class="table-avatar me-2"> Jose D.
                                 </td>
                                 <td>Support for theme</td>
+                                <td>$983.99</td>
                                 <td><span class="priority-badge priority-medium">Medium</span></td>
                                 <td><span class="status-badge status-open">Open</span></td>
                                 <td>01/01/2021</td>
-                                <td>01/02/2021</td>
                                 <td>
                                     <div class="col-8">
-                                        <button type="button" class="btn btn-outline-secondary mb-0"><i class="fas fa-file-invoice"></i></i></i></button>
+                                        <a type="button" class="btn btn-outline-secondary mb-0" data-bs-toggle="modal" data-bs-target="#invoice"><i class="fas fa-file-invoice"></i></i></i></a>
+
+                                        <!-- Modal -->
+                                            <div class="modal fade" id="invoice" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                                <div class="modal-dialog modal-xl modal-dialog-centered modal-dialog-scrollable">
+                                                    <div class="modal-content">
+                                                        <div class="modal-header">
+                                                            <h1 class="modal-title fs-5" id="exampleModalLabel">View Receipt</h1>
+                                                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                                        </div>
+                                                        <div class="modal-body">
+                                                            <iframe src="/receipt/FA2510-0619.pdf" frameborder="0" width="100%" height="600px"></iframe>
+                                                        </div>
+                                                        <div class="modal-footer">
+                                                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
                                         <button type="button" class="btn btn-outline-danger mb-0"><i class="fas fa-trash"></i></button>
                                     </div>
                                 </td>
@@ -178,10 +196,10 @@
                                     <img src="https://rickandmortyapi.com/api/character/avatar/769.jpeg" alt="Avatar" class="table-avatar me-2"> E. Brown
                                 </td>
                                 <td>Your application received</td>
+                                <td>$411.00</td>
                                 <td><span class="priority-badge priority-low">Low</span></td>
                                 <td><span class="status-badge status-closed">Closed</span></td>
                                 <td>01/02/2021</td>
-                                <td>05/02/2021</td>
                                 <td>
                                     <div class="col-8">
                                         <button type="button" class="btn btn-outline-secondary mb-0"><i class="fas fa-file-invoice"></i></i></i></button>
@@ -196,10 +214,10 @@
                                     <img src="https://rickandmortyapi.com/api/character/avatar/769.jpeg" alt="Avatar" class="table-avatar me-2"> Gerora
                                 </td>
                                 <td>Verify your email</td>
+                                <td>$615.98</td>
                                 <td><span class="priority-badge priority-high">High</span></td>
                                 <td><span class="status-badge status-open">Open</span></td>
                                 <td>11/02/2021</td>
-                                <td>14/02/2021</td>
                                 <td>
                                     <div class="col-8">
                                         <button type="button" class="btn btn-outline-secondary mb-0"><i class="fas fa-file-invoice"></i></i></i></button>
@@ -214,10 +232,10 @@
                                     <img src="https://rickandmortyapi.com/api/character/avatar/769.jpeg" alt="Avatar" class="table-avatar me-2"> Karen Lian
                                 </td>
                                 <td>Support for theme</td>
+                                <td>$411.00</td>
                                 <td><span class="priority-badge priority-medium">Medium</span></td>
                                 <td><span class="status-badge status-open">Open</span></td>
                                 <td>11/02/2021</td>
-                                <td>15/02/2021</td>
                                 <td>
                                     <div class="col-8">
                                         <button type="button" class="btn btn-outline-secondary mb-0"><i class="fas fa-file-invoice"></i></i></i></button>
@@ -232,10 +250,10 @@
                                     <img src="https://rickandmortyapi.com/api/character/avatar/769.jpeg" alt="Avatar" class="table-avatar me-2"> Mark diaz
                                 </td>
                                 <td>Calling for help</td>
+                                <td>$678.00</td>
                                 <td><span class="priority-badge priority-high">High</span></td>
                                 <td><span class="status-badge status-closed">Closed</span></td>
                                 <td>12/02/2021</td>
-                                <td>19/02/2021</td>
                                 <td>
                                     <div class="col-8">
                                         <button type="button" class="btn btn-outline-secondary mb-0"><i class="fas fa-file-invoice"></i></i></i></button>
@@ -250,10 +268,10 @@
                                     <img src="https://rickandmortyapi.com/api/character/avatar/769.jpeg" alt="Avatar" class="table-avatar me-2"> Josjues D.
                                 </td>
                                 <td>Management</td>
+                                <td>$399.08</td>
                                 <td><span class="priority-badge priority-low">Low</span></td>
                                 <td><span class="status-badge status-closed">Closed</span></td>
                                 <td>13/02/2021</td>
-                                <td>20/02/2021</td>
                                 <td>
                                     <div class="col-8">
                                         <button type="button" class="btn btn-outline-secondary mb-0"><i class="fas fa-file-invoice"></i></i></i></button>
@@ -268,10 +286,10 @@
                                     <img src="https://rickandmortyapi.com/api/character/avatar/769.jpeg" alt="Avatar" class="table-avatar me-2"> Phylia Maciel
                                 </td>
                                 <td>Support for theme</td>
+                                <td>$500.00</td>
                                 <td><span class="priority-badge priority-low">Low</span></td>
                                 <td><span class="status-badge status-open">Open</span></td>
                                 <td>15/02/2021</td>
-                                <td>22/02/2021</td>
                                 <td>
                                     <div class="col-8">
                                         <button type="button" class="btn btn-outline-secondary mb-0"><i class="fas fa-file-invoice"></i></i></i></button>
@@ -286,10 +304,10 @@
                                     <img src="https://rickandmortyapi.com/api/character/avatar/769.jpeg" alt="Avatar" class="table-avatar me-2"> Mark john D.
                                 </td>
                                 <td>Verify your email</td>
+                                <td>$499.99</td>
                                 <td><span class="priority-badge priority-medium">Medium</span></td>
                                 <td><span class="status-badge status-closed">Closed</span></td>
                                 <td>16/02/2021</td>
-                                <td>23/02/2021</td>
                                 <td>
                                     <div class="col-8">
                                         <button type="button" class="btn btn-outline-secondary mb-0"><i class="fas fa-file-invoice"></i></i></i></button>
